update text, removed white color

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <div class="callout large primary">
       <div class="row column text-center">
-        <h1><span class="white-text">Think it.</span> <span class="gold-text">Build it.</span> <span class="pink-text">Deploy it.</span></h1>
+        <h1><span class="">Think it.</span> <span class="gold-text">Build it.</span> <span class="pink-text">Deploy it.</span></h1>
       </div>
     </div>
 
